# GEML

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: goal1_corpus_final.yaml  goal1_final.yaml  goal1_generator_final.yaml  goal2_final.yaml  goal3_final.yaml  goal4_final.yaml  goal6_pairs.yaml  goal7_steps.yaml
docs/: CLEANROOM_RULES.md  index.html
docs/specs/: AST_SCHEMA.md  CORPUS_SPEC.md  EGRAPH_DOMAIN_RULES.md  EGRAPH_SEMANTICS.md  EML_ARITHMETIC_FORMULAS.md  EML_CORE_FORMULAS.md  EML_SOURCE_LEDGER.md  EML_TRANSCENDENTAL_FORMULAS.md  EXPRESSION_SCHEMA.md  GRAMMAR_V2.md  GRAPH_SCHEMA.md  OPERATOR_DOMAIN_REGISTRY.md  PAIR_DATASET_SPEC.md  STEP_DATASET_SPEC.md
src/geml/: __init__.py
tests/: test_imports.py
tests/analysis/: test_goal2_analysis.py  test_goal3_analysis.py  test_goal4_analysis.py
tests/ast/: test_builder.py  test_statistics.py
tests/contracts/: test_ast.py  test_corpus.py  test_expression.py
tests/dag/: test_ast_dag.py  test_direct_eml_dag.py  test_eml_dag.py
tests/data/: test_corpus_storage.py  test_generator.py  test_pairs.py  test_steps.py
tests/egraph/: test_candidate_extraction.py  test_core.py  test_eml_cost.py  test_policy.py  test_rewrite_engine.py  test_rules_domain.py  test_rules_safe.py
tests/eml/: test_compiler_arithmetic.py  test_compiler_core.py  test_compiler_transcendental.py  test_counting.py  test_ir.py
tests/experiments/: test_goal1_smoke.py  test_goal2_smoke.py  test_goal3_audit.py  test_goal3_smoke.py  test_goal4_smoke.py
tests/graph/: test_schema.py
(+112 files in other folders)
